# Todo-App

./: .env  .gitignore  Cargo.toml  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: config.rs  main.rs
backend/src/auth/: jwt_middleware.rs  middleware.rs  mod.rs  validation.rs
backend/src/controllers/: user_controller.rs
backend/src/routes/: user_routes.rs
backend/src/services/: user_service.rs
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/mycomponents/: Benefits.tsx  CTA.tsx  Footer.tsx  Header.tsx  Hero.tsx  Testimonials.tsx
frontend/src/pages/: LandingPage.tsx  LoginPage.tsx  SignupPage.tsx
src/auth/: jwt.rs
src/controllers/: task_controller.rs  user_controller.rs
src/database/: db.rs
src/models/: tasks.rs  users.rs
src/routes/: task_routes.rs  user_routes.rs
src/utils/: auth.rs
