[package]
name = "todo"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-service = "2"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
dotenvy = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
argon2 = "0.5"
password-hash = "0.5"
rand_core = "0.6"
once_cell = "1"
thiserror = "1"
env_logger = "0.11"
log = "0.4"

